########################################
#	  New changes in v0.2	       #
########################################

- Moved to FMOD 1.07.
- Changed the codebase to c++.
- Rewriting all components.
- Code refactoring.
- Project restructuring.
- Using Netbeans as default IDE.
- Add new control keys.
- Deprecating some sound effects.
- Readme update.
- Man page added.
- Display lyric feature added.