@@ -10,7 +10,9 @@
             <file>file:/media/kixz/30525334-07b6-4d1a-8761-c77afda68390/mygit/CISAP-CPP/CISAP/main.cpp</file>
             <file>file:/media/kixz/30525334-07b6-4d1a-8761-c77afda68390/mygit/CISAP-CPP/CISAP/parser.cpp</file>
             <file>file:/media/kixz/30525334-07b6-4d1a-8761-c77afda68390/mygit/CISAP-CPP/CISAP/init.cpp</file>
+            <file>file:/media/kixz/30525334-07b6-4d1a-8761-c77afda68390/mygit/CISAP-CPP/CISAP/inc/fmod.hpp</file>
             <file>file:/media/kixz/30525334-07b6-4d1a-8761-c77afda68390/mygit/CISAP-CPP/CISAP/inc/init.h</file>
+            <file>file:/media/kixz/30525334-07b6-4d1a-8761-c77afda68390/mygit/CISAP-CPP/CISAP/inc/parser.h</file>
         </group>
     </open-files>
 </project-private>
